<resources>
    <string name="app_name">ArquitecturaMVPBase</string>
    <string name="product_name">Nombre</string>
    <string name="loading_message">Cargando...</string>
    <string name="addproduct_button_add">Agregar</string>
    <string name="product_quantity">Cantidad</string>
    <string name="product_price">Precio</string>
    <string name="product_desription">Descripcion</string>
    <string name="no_conected_internet">No hay conexión a internet</string>
    <string name="delete_ok">Eliminado correctamente</string>
    <string name="no_deleted">No se ha podido eliminar</string>
    <string name="error">Error</string>
    <string name="error_desconocido">Ha ocurrido un error</string>
    <string name="reintentar">Reintentar</string>
    <string name="cancelar">Cancelar</string>
    <string name="update_fail">Ha ocurrido un error al actualizar</string>
    <string name="update_ok">Se ha actualizado correctamente</string>
    <string name="no_update">No se pudo editar el producto</string>
    <string name="updateproduct_button_update">Editar</string>
    <string name="create_ok">Se ha creado el producto correctamente</string>
    <string name="create_fail">No se ha podido create el producto. Por favor reintente de nuevo</string>
    <string name="customer_add_ok">Se ha creado correctamente el contacto</string>
    <string name="my_text"><u>Linea</u></string>
    <string name="customer_name">Nombre</string>
    <string name="customer_surname">Apellido</string>
    <string name="customer_description_phone">Descripcion teléfono</string>
    <string name="customer_phone_number">Numero teléfonico</string>
    <string name="customer_phone_lat">Latitud</string>
    <string name="customer_phone_long">Longitud</string>
    <string name="customer_button_add">Guardar Cliente</string>
    <string name="customer_button_savePhone">Agregar Teléfono</string>
    <string name="customer_button_showPhoneList">Ver Telefonos</string>
    <string name="login_fail">No se pudo iniciar sesión</string>
    <string name="login_email">Email</string>
    <string name="login_password">Contraseña</string>
    <string name="login_button_login">Iniciar Sesión</string>
    <string name="config_title">INFORMACION DEL PERFIL</string>
    <string name="invitaciones">Aceptar Invitaciones Automaticamente</string>
    <string name="sincronizar">Sincronizar cuenta con</string>
    <string name="close_session">Cerrar Sesión</string>
    <string name="title_activity_maps">Map</string>
    <string name="video_button">Video</string>
    <string name="barcode_button">Leer Código</string>
</resources>
