<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:hint="@string/login_email"
            android:text="oscar@gmail.com"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:text="123456"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:hint="@string/login_password" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/login_button_login"
        android:textColor="@color/colorWhite"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        />

</LinearLayout>
