<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">

        <ImageView
            android:src="@mipmap/oskr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        android:layout_weight="0.7">

        <TextView
            android:id="@+id/detail_product_name_title"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/product_name"/>
        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/detail_product_name"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"/>
        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/detail_product_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_product_name_title"
            android:textStyle="bold"
            android:text="@string/product_price"/>
        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/detail_product_price"
            android:layout_alignParentRight="true"
            android:layout_below="@id/detail_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price"/>
        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/detail_product_cantidad_title"
            android:layout_below="@id/detail_product_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/product_quantity"/>
        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/detail_product_cantidad"
            android:layout_alignParentRight="true"
            android:layout_below="@id/detail_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_quantity"/>

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/detail_product_descripcion_title"
            android:layout_below="@id/detail_product_cantidad_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/product_desription"/>
        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/detail_product_descripcion"
            android:layout_alignParentRight="true"
            android:layout_below="@id/detail_product_cantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_desription"/>

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/detail_product_delete_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:src="@drawable/ic_delete"
        />

</LinearLayout>